syntax = "proto3";
package proto;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ferza17/ecommerce-microservices-v2/user-service/model/pb";


message UserLoginByEmailAndPasswordRequest {
  string email = 1;
  string password = 2;
}

message UserLogoutByTokenRequest {
  string token = 1;
}

message UserLogoutByTokenResponse {}

message FindUserByTokenRequest {
  string token = 1;
}

message UserVerifyOtpRequest {
  string otp = 1;
}

message UserVerifyOtpResponse {
  string accessToken = 1;
  string refreshToken = 2;
}