syntax = "proto3";
package proto;
import "google/protobuf/timestamp.proto";
import "userMessage.proto";
import "authMessage.proto";

option go_package = "github.com/ferza17/ecommerce-microservices-v2/user-service/model/pb";

service AuthService {
  rpc UserLogoutByToken(UserLogoutByTokenRequest) returns (UserLogoutByTokenResponse);
  rpc UserVerifyOtp(UserVerifyOtpRequest) returns (UserVerifyOtpResponse);
  rpc FindUserByToken(FindUserByTokenRequest) returns (User);
}